--- a/iap-integration/docs/도메인모델.md
+++ b/iap-integration/docs/도메인모델.md
@@ -313,3 +313,102 @@ Refund (Aggregate Root)
 - 회원(Member) 엔티티 추가로 명확한 회원 관리
 - 구독 상태를 MemberSubscriptionStatus로 분리하여 더 명확한 상태 관리
 - 결제 검증 후 즉시 MemberSubscription 생성하여 중복 방지 및 추적 용이
+
+---
+
+## 9. Settlement (정산)
+**분류**: Entity
+
+**비즈니스 설명**: 플랫폼별 매출 정산 정보를 관리하는 엔티티
+
+**속성**:
+- id: 정산 고유 식별자
+- platform: 정산 대상 플랫폼 (Google Play, App Store)
+- settlementDate: 정산 기준일 (LocalDate)
+- totalRevenue: 총 매출액 (BigDecimal)
+- platformFee: 플랫폼 수수료 (BigDecimal)
+- netRevenue: 순매출액 (총매출 - 수수료) (BigDecimal)
+- currency: 통화 코드
+- paymentCount: 결제 건수
+- refundCount: 환불 건수
+- refundAmount: 환불 금액 (BigDecimal)
+- status: 정산 상태 (SettlementStatus)
+- createdAt: 생성일시 (LocalDateTime)
+- updatedAt: 수정일시 (LocalDateTime)
+
+**비즈니스 규칙**:
+- 일별 정산 데이터 생성 및 관리
+- 플랫폼 수수료 자동 계산 (Google: 15%/30%, Apple: 15%/30%)
+- 순매출 = 총매출 - 플랫폼수수료 - 환불금액
+- 정산 데이터는 플랫폼 보고서와 일치해야 함
+- 월별/연별 집계 데이터 제공
+
+---
+
+## 10. SettlementStatus (정산 상태)
+**분류**: Value Object
+
+**비즈니스 설명**: 정산 처리의 진행 상태를 나타내는 값
+
+**속성**:
+- 대기 중 (PENDING): 정산 데이터 수집 대기
+- 처리 중 (PROCESSING): 정산 계산 및 검증 진행
+- 완료됨 (COMPLETED): 정산 완료
+- 실패함 (FAILED): 정산 처리 실패
+- 분쟁 중 (DISPUTED): 플랫폼과 데이터 불일치로 분쟁 상태
+
+**비즈니스 규칙**:
+- 완료된 정산은 수정 불가
+- 실패한 정산은 재처리 가능
+- 분쟁 중인 정산은 수동 해결 필요
+
+---
+
+## 11. ReconciliationRecord (대사 기록)
+**분류**: Entity
+
+**비즈니스 설명**: 내부 시스템과 플랫폼 데이터 간의 대사 처리 결과를 기록하는 엔티티
+
+**속성**:
+- id: 대사 기록 고유 식별자
+- platform: 대사 대상 플랫폼 (Google Play, App Store)
+- reconciliationDate: 대사 기준일 (LocalDate)
+- internalTransactionCount: 내부 시스템 거래 건수
+- externalTransactionCount: 플랫폼 거래 건수
+- internalAmount: 내부 시스템 거래 금액 (BigDecimal)
+- externalAmount: 플랫폼 거래 금액 (BigDecimal)
+- discrepancyCount: 불일치 건수
+- discrepancyAmount: 불일치 금액 (BigDecimal)
+- currency: 통화 코드
+- status: 대사 상태 (ReconciliationStatus)
+- notes: 대사 처리 메모
+- createdAt: 생성일시 (LocalDateTime)
+- updatedAt: 수정일시 (LocalDateTime)
+
+**비즈니스 규칙**:
+- 일별 자동 대사 처리 수행
+- 불일치 발견 시 상세 분석 및 조치 필요
+- 대사 결과는 감사 추적을 위해 영구 보관
+- 연속적인 불일치 발생 시 알림 발송
+- 월별/분기별 대사 요약 보고서 생성
+
+---
+
+## 12. ReconciliationStatus (대사 상태)
+**분류**: Value Object
+
+**비즈니스 설명**: 대사 처리의 상태를 나타내는 값
+
+**속성**:
+- 대기 중 (PENDING): 대사 처리 대기
+- 진행 중 (IN_PROGRESS): 대사 처리 진행
+- 일치함 (MATCHED): 내부와 외부 데이터 일치
+- 불일치 발견 (DISCREPANCY_FOUND): 데이터 불일치 발견
+- 해결됨 (RESOLVED): 불일치 해결 완료
+- 실패함 (FAILED): 대사 처리 실패
+
+**비즈니스 규칙**:
+- 일치 상태는 추가 조치 불필요
+- 불일치 발견 시 원인 분석 및 조치 필요
+- 해결된 대사는 재처리 불가
+- 실패한 대사는 재시도 가능
